GNOME Bugzilla – Bug 649596
st-scroll-view: remove spurious assignment of uninitialized data
Last modified: 2011-05-11 20:18:18 UTC
Created attachment 187382 [details] [review] st-scroll-view: remove spurious assignment of uninitialized data patch attached
Review of attachment 187382 [details] [review]: Looks good
Attachment 187382 [details] pushed as 73cae8c - st-scroll-view: remove spurious assignment of uninitialized data