st-scroll-view: remove spurious assignment of uninitialized data

https://bugzilla.gnome.org/show_bug.cgi?id=649596